2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_tape.c (ndmta_read_quantum): Fix setting
	  ta->mover_state.record_num

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fir debugging message
	* common-src/glib-util.c: Improve error message
	* perl/Amanda/Extract.pm: Fix in error path

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amlog-script.pl, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl,
	  application-src/script-email.pl: Log the arguments

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Change message

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.c: Use the amanda-client.conf hostname setting

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add amanda-client 'hostname' global setting
	* common-src/conffile.h: Add CNF_HOSTNAME
	* perl/Amanda/Config.swg: Add CNF_HOSTNAME
	* man/xml-source/amanda-client.conf.5.xml: Document hostname

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Use getstatefname()

2015-12-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c (get_fsusage): New function to the filesystem
	  usage
	* common-src/amutil.h (get_fsusage): Add prototype.
	 common-src/amxml.c: Cleanup
	* server-src/diskfile.c (xml_optionstr_disk, xml_estimate_disk,
	  xml_application_disk): New functions to return anxnl string
	* server-src/diskfile.h (xml_optionstr_disk, xml_estimate_disk,
	  xml_application_disk): Add prototypes
	* perl/Amanda/Disklist.swg (xml_optionstr_disk, xml_application_disk,
	  xml_estimate_disk): Swig these functions
	* perl/Amanda/Logfile.swg (log_start_multiline, log_end_multiline):
	  Swig these functions
	* perl/Amanda/Util.swg (amxml_format_tag, get_fsusage,